🏪🍭 Updated with Glitch - added the URL shortener API

--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Timestamp stuff</title>
+    <title>edfig</title>
     <meta name="description" content="A small collection of my Free Code Camp stuff">
     <link id="favicon" rel="icon" href="https://glitch.com/edit/favicon-app.ico" type="image/x-icon">
     <meta charset="utf-8">
@@ -23,10 +23,17 @@
       <h1>
         Code stuff by edfig
       </h1>
+      <p>
+        A place for me to practice. Guided by Free Code Camp. Hopefully more in the near future.<br/>
+        <br/>
+        Peace,<br/>
+        <br/>
+        Edwin
+      </p>
     </header>
-    <h2>
+    <h3>
       Paths:
-    </h2>
+    </h3>
     <span class="bold">Who Am I?</span>
     <p class="code">
       ./api/whoami
@@ -37,6 +44,13 @@
     <p class="code">
       ./api/headers
     </p>
+    <p>
+      <span class="bold">URL Shortener Microserver</span>
+    </p>
+    <p class="code">
+      ./api/shorty/new/[valid URL] saves the URL + assign a shortycode
+      ./api/shorty/[shortened code] will redirect you to the saved URL
+    </p>    
 
     <footer>
       <a href="https://glitch.com">
