--- a/public/style.css
+++ b/public/style.css
@@ -26,7 +26,7 @@ p {
   max-width: 600px;
 }
 
-form {
+/*form {
   margin-bottom: 25px;
   padding: 15px;
   background-color: cyan;
@@ -35,6 +35,7 @@ form {
   max-width: 340px;
   border-radius: 3px;
 }
+*/
 
 input {
   display: block;
