--- a/views/index.html
+++ b/views/index.html
@@ -50,7 +50,16 @@
     <p class="code">
       ./api/shorty/new/[valid URL] saves the URL + assign a shortycode
       ./api/shorty/[shortened code] will redirect you to the saved URL
-    </p>    
+    </p>
+    <p>
+      <span class="bold">Submit a file to view its filesize</span>
+      <form action ="/upload" method="post" enctype="multipart/form-data"> <!--multer requires multipart/form-data enctype to work-->
+        <label for="file">Please select a file</label>
+        <input type="file" id="file" name="file">
+        <input type="submit">
+        <!--<button>Choose File...</button><span id="uploadedfile"> filename goes here </span><button>Submit</button>-->
+      </form>
+    </p>
 
     <footer>
       <a href="https://glitch.com">
